src/types/tests/snapshots/tgbot__types__tests__passport__passport_element_error-2.snap
---
source: src/types/tests/passport.rs
expression: value.unwrap()
---
{
  "source": "front_side",
  "type": "driver_license",
  "file_hash": "file_hash",
  "message": "bad file"
}
