src/types/tests/snapshots/tgbot__types__tests__passport__passport_element_error-7.snap
---
source: src/types/tests/passport.rs
expression: value.unwrap()
---
{
  "source": "translation_file",
  "type": "bank_statement",
  "file_hash": "file_hash",
  "message": "bad file"
}
