src/types/tests/snapshots/tgbot__types__tests__passport__passport_element_error-8.snap
---
source: src/types/tests/passport.rs
expression: value.unwrap()
---
{
  "source": "translation_files",
  "type": "bank_statement",
  "file_hashes": [
    "file_hash"
  ],
  "message": "bad file"
}
