src/types/tests/snapshots/tgbot__types__tests__passport__passport_element_error-9.snap
---
source: src/types/tests/passport.rs
expression: "PassportElementError::unspecified(EncryptedPassportElementType::BankStatement,\n\"element_hash\", \"bad file\")"
---
{
  "source": "unspecified",
  "type": "bank_statement",
  "element_hash": "element_hash",
  "message": "bad file"
}
