src/types/tests/snapshots/tgbot__types__tests__passport__passport_element_error.snap
---
source: src/types/tests/passport.rs
expression: value.unwrap()
---
{
  "source": "data",
  "type": "address",
  "field_name": "address",
  "data_hash": "data_hash",
  "message": "bad address"
}
