src/types/tests/snapshots/tgbot__types__tests__passport__set_passport_data_errors.snap
---
source: src/types/tests/passport.rs
expression: actual_data
---
{
  "errors": [],
  "user_id": 1
}
